Fixes issue where video pushing elements on smaller mobile devices
Also changes some other trivial styles

--- a/css/agency.css
+++ b/css/agency.css
@@ -36,7 +36,7 @@ h6 {
 }
 
 .page-section {
-  padding: 100px 0;
+  padding: 75px 0;
 }
 
 .page-section h2.section-heading {
@@ -180,20 +180,25 @@ header.masthead {
   text-align: center;
   color: white;
   position: relative;
-  height: 100vh;
-  min-height: 25rem;
-  width: 100%;
-  overflow: hidden;
-  margin: 0;
 }
 
-header.masthead .container {
+header.masthead .video-container {
+  position: absolute;
+  top: 0%;
+  left: 0%;
   height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
+
+header.masthead video {
+  z-index: 0;
 }
 
 header.masthead .intro-text {
-  top: 50%;
   position: relative;
+  padding-top: 150px;
+  padding-bottom: 100px;
 }
 
 header.masthead .intro-text .intro-lead-in {
@@ -212,17 +217,6 @@ header.masthead .intro-text .intro-heading {
   font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
-header.masthead .masthead-video {
-  position: absolute;
-  background-image: radial-gradient(circle at 36% 48%, #000000, rgba(11, 39, 65, 0.32) 87%, rgba(0, 0, 0, 0));
-  width: 100%;
-  z-index: 0;
-}
-
-header.masthead .masthead-video #myVideo {
-  width: 100%;
-}
-
 .logo-container {
   width: 75px;
   height: 75px;
@@ -235,6 +229,10 @@ header.masthead .masthead-video #myVideo {
 }
 
 @media (min-width: 768px) {
+  header.masthead .intro-text {
+    padding-top: 250px;
+    padding-bottom: 200px;
+  }
   header.masthead .intro-text .intro-lead-in {
     font-size: 40px;
     font-style: italic;
@@ -248,6 +246,12 @@ header.masthead .masthead-video #myVideo {
     line-height: 75px;
     margin-bottom: 50px;
     font-family: 'Montserrat', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+  }
+}
+
+@media (min-width: 1024px) {
+  video.fill-width {
+    width: 100%;
   }
 }
 
