--- a/scss/layout/_masthead.scss
+++ b/scss/layout/_masthead.scss
@@ -3,18 +3,34 @@ header.masthead {
   text-align: center;
   color: white;
   position: relative;
-  height: 100vh;
-  min-height: 25rem;
-  width: 100%;
-  overflow: hidden;
-  margin: 0;
-  .container {
-    height: 100%;
-  }
-  .intro-text {
-    top: 50%;
-    position: relative;
 
+  // height: 100vh;
+  // min-height: 25rem;
+  // width: 100%;
+  // overflow: hidden;
+  // margin: 0;
+  // background-image: url('../img/portfolio/Drone_Bottom.jpg');
+  // background-image: url('../img/header-bg.jpg');
+  // background-repeat: no-repeat;
+  // background-attachment: scroll;
+  // background-position: center center;
+  // background-size: cover;
+  .video-container {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+  }
+  video {
+    z-index: 0;
+  }
+
+  .intro-text {
+    position: relative;
+    padding-top: 150px;
+    padding-bottom: 100px;
     .intro-lead-in {
       font-size: 22px;
       font-style: italic;
@@ -30,24 +46,18 @@ header.masthead {
       @include heading-font;
     }
   }
-  .masthead-video {
-    position: absolute;
-    background-image: radial-gradient(
-      circle at 36% 48%,
-      #000000,
-      rgba(11, 39, 65, 0.32) 87%,
-      rgba(0, 0, 0, 0)
-    );
-    width: 100%;
-    #myVideo {
-      width: 100%;
-    }
-    // min-width: 100%;
-    // min-height: 100%;
-    // width: auto;
-    // height: auto;
-    z-index: 0;
-  }
+  // .masthead-video {
+  //   position: absolute;
+  //   width: 100%;
+  //   #myVideo {
+  //     width: 100%;
+  //   }
+  //   // min-width: 100%;
+  //   // min-height: 100%;
+  //   // width: auto;
+  //   // height: auto;
+  //   z-index: 0;
+  // }
 }
 .logo-container {
   width: 75px;
@@ -61,6 +71,8 @@ header.masthead {
 @media (min-width: 768px) {
   header.masthead {
     .intro-text {
+      padding-top: 250px;
+      padding-bottom: 200px;
       .intro-lead-in {
         font-size: 40px;
         font-style: italic;
@@ -76,5 +88,10 @@ header.masthead {
         @include heading-font;
       }
     }
+  }
+}
+@media (min-width: 1024px) {
+  video.fill-width {
+    width: 100%;
   }
 }
